Fixed spacing issue with social media Nav.Links

--- a/src/components/AboutMe/style.css
+++ b/src/components/AboutMe/style.css
@@ -1,11 +1,20 @@
 .img_instagram{
-    height: 60px;
-    margin-left: 2.5em;
-    margin-top: 3em;
-    width: auto;
-    align-items: flex-end;
+    height: 5em;
+    /* margin-left: 2.5em; */
+    margin-top: 2em; 
+    /* width: auto; */
+    /* align-items: flex-end; */
     filter: drop-shadow(7px 7px 7px #000000);
 
+    }
+
+    .logo {
+       display: inline-flex;
+       margin-bottom: 1em;
+    }
+
+    .logos {
+        /* justify-content: center; */
     }
 
     html{
@@ -33,13 +42,8 @@
 
     }
 
-    .row{
+    .row {
         justify-content: center;
-    }
-
-    .logos.row{
-        justify-content: left;
-   
     }
 
     h1{
